fixing alignment error in the whole web

--- a/src/App.css
+++ b/src/App.css
@@ -2,5 +2,4 @@
   max-width: 1400px;
   margin: 0 auto;
   padding: 16px;
-  text-align: left;
 }
